added getcosts und getCollateral funktion
